# dms

./: .env.example  .gitignore  DMS_V3_Agentic_Master_Plan.md  README.md  config.py  main.py  main_v5.py  pyproject.toml  requirements.txt  setup.sh
agents/: coaching_agent.py  memory_agent.py  orchestrator.py  prediction_agent.py  report_agent.py  safety_agent.py
agents/tools/: alert_tools.py  memory_tools.py  sensor_tools.py
ai/: ollama_client.py  prompts.py
alerts/: alert_engine.py  alert_engine_v5.py  telegram_notifier.py  tts_engine.py
calibration/: driver_calibration.py
core/: bus.py  config.py  models.py
dashboard/: analytics_window.py  logger.py  overlay.py  web_dashboard.py
dashboard/pyqt/: main_window.py
detection/: gru_blink.py  rppg_ensemble.py  traffic_detector.py
detectors/: ear_detector.py  face_detector.py  fatigue_score.py  gaze.py  head_pose.py  mar_detector.py  object_detector.py  perclos.py  rppg.py
evaluation/: eval_runner.py
memory/: database.py  driver_memory.py  episodic.py  episodic_memory.py  memory_manager.py  semantic_memory.py  working_memory.py
observability/: tracer.py
ollama_integration/: ai_reporter.py
perception/: ear_detector.py  face_detector.py  fatigue_engine_v5.py  fatigue_score.py  gaze_tracker.py  head_pose.py  kalman_bank.py  mar_detector.py  object_detector.py  perclos.py  pipeline.py  rppg.py  scene_analyzer.py
rag/: rag_engine.py
static/: dashboard.html
voice/: voice_pipeline.py
voice_agent/: cognition.py  intent_router.py  rag_pipeline.py  stt.py  stt_engine.py  tts_engine.py  voice_agent.py
(+7 files in other folders)
